deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kargo.9rum.cc/app-name: app_2f4ae2147fcc
        kargo.9rum.cc/phase: dev
    labels:
        app: frontend
        app.kubernetes.io/managed-by: kargocd
    name: frontend
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: krmp-d2hub-idock.9rum.cc/dev-test/repo_2f4ae2147fcc
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: config-volume
                        mountPath: /usr/src/app/.env
                        subPath: .env
            volumes:
                - name: config-volume
                  configMap:
                      name: url-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kargo.9rum.cc/app-name: app_2f4ae2147fcc
        kargo.9rum.cc/phase: dev
    labels:
        app: backend
        app.kubernetes.io/managed-by: kargocd
    name: backend
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: backend
                  image: krmp-d2hub-idock.9rum.cc/goorm/techcamp-backend
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    annotations:
        kargo.9rum.cc/app-name: app_2f4ae2147fcc
        kargo.9rum.cc/phase: dev
    labels:
        app.kubernetes.io/managed-by: kargocd
    name: frontend-service
    namespace: default
spec:
    ports:
        - name: http
          port: 80
          targetPort: 80
    selector:
        app: frontend
    type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
    annotations:
        kargo.9rum.cc/app-name: app_2f4ae2147fcc
        kargo.9rum.cc/phase: dev
    labels:
        app.kubernetes.io/managed-by: kargocd
    name: backend-service
    namespace: default
spec:
    ports:
        - name: http
          port: 8080
          targetPort: 8080
    selector:
        app: backend
    type: LoadBalancer
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    annotations:
        kargo.9rum.cc/app-name: app_2f4ae2147fcc
        kargo.9rum.cc/phase: dev
        nginx.ingress.kubernetes.io/rewrite-target: /$2
        nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    labels:
        app.kubernetes.io/managed-by: kargocd
    name: frontend
    namespace: default
spec:
    rules:
        - http:
              paths:
                  - backend:
                        serviceName: frontend-service
                        servicePort: 80
                    path: /k2f4ae2147fcca(/|$)(.*)
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mariadb
    namespace: default
    labels:
        app: mariadb
spec:
    serviceName: mariadb
    selector:
        matchLabels:
            app: mariadb
    template:
        metadata:
            labels:
                app: mariadb
        spec:
            containers:
                - name: mariadb
                  image: mariadb:10.6.12
                  volumeMounts:
                      - name: data
                        mountPath: /var/lib/mysql
                        subPath: mysql
                      # Using /docker-entrypoint-initdb.d/*.sql for Initializing a fresh instance
                      # (- ref : https://hub.docker.com/_/mariadb )
                      - name: mariadb-initdb
                        mountPath: /docker-entrypoint-initdb.d
                  resources:
                      limits:
                          memory: 1Gi
                  readinessProbe:
                      tcpSocket:
                          port: 3306
            volumes:
                - name: mariadb-initdb
                  configMap:
                      name: mariadb-initdb-config
    ## /docker-entrypoint-initdb.d is not working, When init data is remained in PV, PVC
    volumeClaimTemplates:
        - metadata:
              name: data
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
    name: mariadb
    namespace: default
spec:
    type: ClusterIP
    clusterIP: None # Headless
    selector:
        app: mariadb
    ports:
        - port: 3306
